--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div id="footer">
   <p>
-    绩点公式
+    GPA 계산 공식
     <a
       (click)="showCalculator()"
       style="font-family: 'Times New Roman', Georgia, serif"
@@ -9,17 +9,20 @@
     </a>
   </p>
   <br />
-  <p>学期 GPA 和总 GPA 为公式计算所得，请以学校官方结果为准！</p>
+  <p>학기 GPA와 총 GPA는 공식에 의해 계산되었으며, 학교 공식 계산 GPA와 차이가 있을 수 있습니다.</p>
   <p>
-    基于
+    본 프로그램은
     <a href="https://www.gnu.org/licenses/gpl-3.0.zh-cn.html" target="_blank"
       >GPLv3</a
     >
-    协议在
-    <a href="https://github.com/Guyutongxue/pkuhelper-web-score" target="_blank"
+    라이센스에 의거하여
+    <a href="https://github.com/timingsniper/honeycourses-pku-scores" target="_blank"
       >GitHub</a
     >
-    开源 ·
-    <a (click)="showEula.emit()">用户须知</a>
+    에 오픈 소스로 공개되어 있습니다·
+    <br/><br/>
+    Based on <a href="https://github.com/Guyutongxue/pkuhelper-web-score">pkuhelper-web-score</a> by Guyutongxue
+    <br/>
+    <a (click)="showEula.emit()">사용 안내</a>
   </p>
 </div>
