오탈자 수정

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
       <p class="mb-2">
         <strong
           >이 웹사이트는 귀하의 인증 자격 정보를 수집하지 않을 것을 약속합니다. </strong
-        >，이는 北大树洞 JWT, 북경대학교 학번 및 북경대학교 포털 비밀번호를
+        > 이는 北大树洞 JWT, 북경대학교 학번 및 북경대학교 포털 비밀번호를
         포함합니다.
       </p>
       <p class="mb-2">
