feat: 폰트 변경, footer/라이센스 수정

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,16 @@
 <div class="title-bar">
   <div class="aux-margin">
-    <div class="title"><p class="centered-line">성적 조회</p></div>
+    <div class="title">
+      <p class="centered-line">
+        성적 조회
+        <span style="font-size: 15px">
+          by
+          <a href="https://honeycourses.com" target="_blank"
+            >답변, 받았습니다!</a
+          ></span>
+      </p>
+    </div>
+
     <div class="flex flex-row flex-wrap">
       <strong>로그인</strong>
       <div class="flex-grow">
