--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,13 @@
+@font-face {
+  font-family: 'NanumSquareNeo-Variable';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  unicode-range: U+0041-005A, U+0061-007A, U+0030-0039, U+1100-11FF, U+3130-318F, U+A960-A97F, U+AC00-D7A3, U+D7B0-D7FF, U+0020-002F, U+003A-0040, U+005B-0060, U+007B-007E;
+}
+
 .container {
+  font-family: 'NanumSquareNeo-Variable';
   max-width: 800px;
   margin: auto;
   color: white;
