--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div id="footer">
   <p>
-    GPA 계산 공식
+    GPA 계산 공식: {{" "}}
     <a
       (click)="showCalculator()"
       style="font-family: 'Times New Roman', Georgia, serif"
@@ -9,7 +9,7 @@
     </a>
   </p>
   <br />
-  <p>학기 GPA와 총 GPA는 공식에 의해 계산되었으며, 학교 공식 계산 GPA와 차이가 있을 수 있습니다.</p>
+  <p>학기 GPA와 총 GPA는 공식에 의해 계산되며, 학교 공식 계산 GPA와 차이가 있을 수 있습니다.</p>
   <p>
     본 프로그램은
     <a href="https://www.gnu.org/licenses/gpl-3.0.zh-cn.html" target="_blank"
@@ -19,10 +19,11 @@
     <a href="https://github.com/timingsniper/honeycourses-pku-scores" target="_blank"
       >GitHub</a
     >
-    에 오픈 소스로 공개되어 있습니다·
+    에 오픈 소스로 공개되어 있습니다. 
     <br/><br/>
-    Based on <a href="https://github.com/Guyutongxue/pkuhelper-web-score">pkuhelper-web-score</a> by Guyutongxue
-    <br/>
+    <a href="https://github.com/timingsniper/honeycourses-pku-scores">honeycourses-pku-scores</a> by Percy Joonwoo Jang.
+    <br/><br/>
     <a (click)="showEula.emit()">사용 안내</a>
+    
   </p>
 </div>
