feat: 이용안내 폰트수정, footer 내용수정

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
   <p>학기 GPA와 총 GPA는 공식에 의해 계산되며, 학교 공식 계산 GPA와 차이가 있을 수 있습니다.</p>
   <p>
     본 프로그램은
-    <a href="https://www.gnu.org/licenses/gpl-3.0.zh-cn.html" target="_blank"
+    <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank"
       >GPLv3</a
     >
     라이센스에 의거하여
@@ -21,7 +21,7 @@
     >
     에 오픈 소스로 공개되어 있습니다. 
     <br/><br/>
-    <a href="https://github.com/timingsniper/honeycourses-pku-scores">honeycourses-pku-scores</a> by Percy Joonwoo Jang.
+    <a href="https://github.com/timingsniper/honeycourses-pku-scores" target="_blank">honeycourses-pku-scores</a> v1.0.0 by Percy Joonwoo Jang.
     <br/><br/>
     <a (click)="showEula.emit()">사용 안내</a>
     
