--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,10 +67,10 @@
         웹 서비스를 사용하지 않으실 수 있는 선택권이 있습니다.
       </p>
       <p class="mb-2">
-        귀하의 北大树洞 JWT와 북경대학교 학번은 브라우저의 로컬 스토리지(Local
+        귀하의 북경대학교 학번은 브라우저의 로컬 스토리지(Local
         Storage)에만 저장됩니다. 또한, 이 웹사이트는 귀하의 북경대학교 포털
-        비밀번호를 어떠한 방식으로도 저장하지 않을 것입니다. 이 웹사이트는
-        귀하의 위의 인증 자격을 상술한 서버 외의 다른 서버에 보내지 않을 것입니다.
+        비밀번호를 어떠한 방식으로도 저장하지 않을 것이며, 귀하의 위의 인증 자격을 상술한 서버 외의 
+        다른 서버에 보내지 않을 것입니다.
       </p>
     </div>
     <div class="modal-action">
