feat: eula 팝업 내용 수정

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
     <h3 class="font-bold text-lg mb-3">사용 안내</h3>
     <div class="h-[350px] overflow-auto">
       <p class="mb-2 font-bold">
-        다음 내용을 주의 깊게 읽어주세요. 이 팝업창의 "동의" 버튼을 클릭하거나
+        다음 내용을 주의 깊게 읽어주세요. 이 팝업창의 "계속" 버튼을 클릭하거나
         이 웹사이트의 기능을 사용하는 것은 아래의 조항에 동의하는 것으로
         간주됩니다.
       </p>
@@ -75,7 +75,7 @@
     </div>
     <div class="modal-action">
       <button class="btn btn-ghost" (click)="declineEula()">거절</button>
-      <button class="btn" (click)="acceptEula()">동의</button>
+      <button class="btn" (click)="acceptEula()">계속</button>
     </div>
   </div>
 </div>
