feat: eula 팝업 방지 시도

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
   <ng-template #viewer>
     <app-viewer></app-viewer>
   </ng-template>
-  <app-footer (showEula)="eulaAcceptance = false"></app-footer>
+  <app-footer (showEula)="toggleEula()"></app-footer>
 </div>
 <!-- 用户须知 -->
 
@@ -35,7 +35,7 @@
   class="modal-toggle"
   [checked]="!eulaAcceptance"
 />
-<div class="modal modal-bottom sm:modal-middle">
+<div class="modal modal-bottom sm:modal-middle" *ngIf="!eulaAcceptance">
   <div class="modal-box" style="font-family: 'NanumSquareNeo-Variable';">
     <h3 class="font-bold text-lg mb-3">사용 안내</h3>
     <div class="h-[350px] overflow-auto">
